[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/fuel.gd" type="Script" id=1]
[ext_resource path="res://gfx/fuel_anim_final_56_100.png" type="Texture" id=2]
[ext_resource path="res://animation/effects/wybuch1_final_blur_110_56.png" type="Texture" id=3]
[ext_resource path="res://sfx/Wybuch.wav" type="Sample" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 22, 45 )

[sub_resource type="Animation" id=2]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ] }

[sub_resource type="Animation" id=3]

resource/name = "animation"
length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ] }

[sub_resource type="SampleLibrary" id=4]

samples/boom = { "db":0.0, "pitch":1.0, "sample":ExtResource( 4 ) }

[node name="fuel" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 11
frame = 2

[node name="animation" type="AnimationPlayer" parent="sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/animation = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="boom" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 3 )
hframes = 13

[node name="animation" type="AnimationPlayer" parent="boom"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/animation = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="boom_sfx" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="visibility" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="area_enter" from="." to="." method="_on_fuel_area_enter"]

[connection signal="area_exit" from="." to="." method="_on_fuel_area_exit"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]


